Fixed alignment in monthly_season.html directive

--- a/css/brievity.css
+++ b/css/brievity.css
@@ -1,6 +1,4 @@
-/*****
- ***** bootstrap
- *****/
+/* bootstrap */
 .panel-primary, .panel-danger {
     border-color: transparent;
     border-radius: 25px;
@@ -8,15 +6,13 @@
 /*.panel-info, .panel-warning {
     border-color: #fff;
 }*/
-/*****
- ***** anchor
- *****/
+
+/* anchor */
  .acor {
     text-decoration: none;
  }
-/*****
- ***** colors
- *****/
+
+/* colors */
 .blue {
     color: blue;
 }
@@ -35,9 +31,8 @@
 .steelblue {
     color: steelblue;
 }
-/*****
- ***** cursor
- *****/
+
+/* cursor */
 .cursor-dn {
     cursor: s-resize;
 }
@@ -47,9 +42,19 @@
 .cursor-up {
     cursor: n-resize;
 }
-/*****
- ***** fonts
- *****/
+
+/* fonts */
+body {
+    font-family: 'Lato', verdana, arial, sans-serif;
+}
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    /* font-size: 100%;
+       font: inherit; */
+    vertical-align: baseline;
+}
 .fs10 {
     font-size: 10px;
 }
@@ -83,23 +88,24 @@
 .fsit {
     font-style: italic;
 }
-/*****
- ***** height
- *****/
+.fsmeta {
+    font-size: 14px;
+    font-family: arial;
+}
+
+/* height */
 .hi20 {
     height: 20px;
 }
-/*****
- ***** html stuff
- *****/
+
+/* html stuff */
  pre {
     background: white;
     border: white;
     margin: 1px 0;
  }
-/*****
- ***** padding
- *****/
+
+/* padding */
 .pa05 {
     padding: 5px;
 }
@@ -145,15 +151,29 @@
 .pt04 {
     padding-top: 4px;
 }
-.ptsec {
-    padding-top: 12px;
+.pt10 {
+    padding-top: 10px;
+}
+.pt15 {
+    padding-top: 15px;
+}
+.pt20 {
+    padding-top: 20px;
+}
+.pt30 {
+    padding-top: 30px;
 }
 .pb04 {
     padding-bottom: 4px;
 }
-/*****
- ***** text
- *****/
+
+/* table */
+.borderless tr td {
+    border: none !important;
+    padding: 0px !important;
+}
+
+/* text */
 .monsea {  /* the monthly seasonality */
     font-size: 15px;
     /* font-family: "Verdana, Arial, Helvetica, sans-serif"; */
